# xchk-xchk-content

./: .gitignore  boot_django.py  load_tests.py  pyproject.toml  setup.py
xchk_xchk_content/: contentviews.py  course.py  tests.py  urls.py
xchk_xchk_content/templates/xchk_xchk_content/: dependency_structure.html  essentials_non_essentials.html  git_benefits.html  key_elements.html  mc_demo.html  modular_checks.html  modular_material.html  motivation.html  personalized_exercises.html  shared_nodes.html  technical_requirements.html  undecided.html  undecided_followup.html
