[tool.poetry]
name = "xchk_xchk_content"
version = "0.0.1"
description = "Course material related to Xchk for the xchk teaching framework"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
regex = ">=2020.7.14"
python = "^3.7"

[tool.poetry.dev-dependencies]
xchk-core = {url = "http://github.com/v-nys/xchk_core/tarball/develop"}
xchk-regex-strategies = {git = "git@github.com:v-nys/xchk_regex_strategies.git", branch="develop"}
xchk-multiple-choice-strategies = {git = "git@github.com:v-nys/xchk-multiple-choice-strategies.git", branch="develop"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
